<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_join_email"
            android:title="가입" />
        <item
            android:id="@+id/nav_login"
            android:title="로그인" />
        <item
            android:id="@+id/nav_mypage"
            android:title="@string/menu_mypage">
            <menu >
                <group android:id="@+id/group_mypage">
                    <item
                        android:id="@+id/nav_mypage_edit"
                        android:title="@string/menu_mypage_edit" />
                </group>
            </menu>

        </item>
        <item
            android:id="@+id/nav_attendance"
            android:title="@string/menu_attendance">
            <menu>
                <group android:id="@+id/group_attendance">
                    <item
                        android:id="@+id/nav_attendance_check"
                        android:title="@string/menu_attendance_check" />
                    <item
                        android:id="@+id/nav_attendance_inquiry"
                        android:title="@string/menu_attendance_inquiry" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_notice"
            android:title="@string/menu_notice">
            <menu>
                <group android:id="@+id/group_notice">
                    <item
                        android:id="@+id/nav_notice_notice"
                        android:title="@string/menu_notice_notice" />
                    <item
                        android:id="@+id/nav_notice_developer"
                        android:title="@string/menu_notice_developer" />
                </group>
            </menu>

        </item>
    </group>

</menu>
